# OmegaUARTController

./: CMakeLists.txt  Kconfig
cmake/: Apple.cmake  ESP32xx.cmake  Linux.cmake  Windows.cmake
examples/compilation-test/: CMakeLists.txt  main.c  main.cpp
examples/desktop-test/: CMakeLists.txt  main.cpp
examples/esp32-test/: CMakeLists.txt  sdkconfig  sdkconfig.old
examples/esp32-test/main/: CMakeLists.txt  idf_component.yml  main.cpp
examples/linux-test/: CMakeLists.txt  main.cpp
examples/macosx-test/: CMakeLists.txt  main.cpp
inc/: OmegaUARTController.h
inc/OmegaUARTController/: UARTController.hpp
src/: OmegaUARTController.c
src/platform/esp32/: UARTController.cpp
src/platform/linux/: UARTController.cpp
src/platform/macosx/: UARTController.cpp
src/platform/windows/: UARTController.cpp
